<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_background"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="684dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="                 Register\n" />

        <EditText
            android:id="@+id/editTextFirstName"
            style="@style/modifiedEditText"
            android:hint="@string/login_first_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />


        <EditText
            android:id="@+id/editTextLastName"
            style="@style/modifiedEditText"
            android:hint="@string/login_last_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextUserName"
            style="@style/modifiedEditText"
            android:hint="@string/login_username_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />


        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextMobilePhone"
            style="@style/modifiedEditText"
            android:hint="@string/login_mobile_number_hint"
            android:inputType="phone"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I'm a homeowner "
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold|normal" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I'm looking to join a shared living space "
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/cirloginButton"
            style="@style/loginButton"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="SIGN UP" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="end"
            android:text="@string/signup_login_hint"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLastName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUserName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputMobilePhone"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</RelativeLayout>